--- a/initial_layout/hj6_temp/Grades.html
+++ b/initial_layout/hj6_temp/Grades.html
@@ -53,7 +53,7 @@
         <li class="nav-header"> <a href="#" data-toggle="collapse" data-target="#userMenu">
           </a>
             <ul class="list-unstyled collapse in" id="userMenu">
-                <li class="active"> <a href="#"><i class="glyphicon glyphicon-home"></i> presonal info </a></li>
+                <li class="active"> <a href="p_info.html"><i class="glyphicon glyphicon-home"></i> presonal info </a></li>
                 <li><a href="Reg.html"><i class="glyphicon glyphicon-cog"></i> Regesiteration</a></li>
                 <li><a href="#"><i class="glyphicon glyphicon-comment"></i> Grades</a></li>
                 <li><a href="#"><i class="glyphicon glyphicon-user"></i> Transcrpit</a></li>
@@ -107,10 +107,7 @@
       	
       <!-- column 2 -->	
       <ul class="list-inline pull-right">
-         <li><a href="#"><i class="glyphicon glyphicon-cog"></i></a></li>
-         <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-comment"></i><span class="count">3</span></a><ul class="dropdown-menu" role="menu"><li><a href="#">1. Is there a way..</a></li><li><a href="#">2. Hello, admin. I would..</a></li><li><a href="#"><strong>All messages</strong></a></li></ul></li>
-         <li><a href="#"><i class="glyphicon glyphicon-user"></i></a></li>
-         <li><a title="Add Widget" data-toggle="modal" href="#addWidgetModal"><span class="glyphicon glyphicon-plus-sign"></span> Add Widget</a></li>
+         <li><a title="Add Widget" data-toggle="modal" href="#addWidgetModal"><span class="glyphicon glyphicon-plus-sign"></span> Logged in as Hady Rashwan</a></li>
       </ul>
       <a href="#"><strong><i class="glyphicon glyphicon-dashboard"></i> Term Grades </strong></a>  
       
