--- a/initial_layout/hj6_temp/Admin_View_Faculty.html
+++ b/initial_layout/hj6_temp/Admin_View_Faculty.html
@@ -65,9 +65,10 @@
         <li class="nav-header"> <a href="#" data-toggle="collapse" data-target="#userMenu">
           </a>
             <ul class="list-unstyled collapse in" id="userMenu">
-                <li class="active"> <a href="p_info.html"><i class="glyphicon glyphicon-home"></i> Assign Grades </a></li>
-                <li><a href="Reg.html"><i class="glyphicon glyphicon-cog"></i> Advising</a></li>
-                <li><a href="Grades.html"><i class="glyphicon glyphicon-comment"></i> Issue Transcript</a></li>
+                <li class="active"> <a href="Admin_Requests_Grades.html"><i class="glyphicon glyphicon-home"></i> Assign Grades </a></li>
+                <li><a href="Admin_Requests_Advising.html"><i class="glyphicon glyphicon-cog"></i> Advising</a></li>
+                <li><a href="Admin_Requests_Transcript.html"><i class="glyphicon glyphicon-comment"></i> Issue Transcript</a></li>
+
 
                
                
