commit v0.5 auto complete example ac

--- a/initial_layout/Current_layout(using hj6_temp)/Admin_View_Course_dep.html
+++ b/initial_layout/Current_layout(using hj6_temp)/Admin_View_Course_dep.html
@@ -54,7 +54,7 @@
           </a>
             <ul class="list-unstyled collapse in" id="userMenu">
                 <li class="active"> <a href="Admin_View_Applicants.html"><i class="glyphicon glyphicon-user"></i> Applicants </a></li>
-                <li><a href="Admin_View_Students.html"><i class="glyphicon glyphicon-user"></i> enrolled students</a></li>
+                <li><a href="Admin_View_Students.html"><i class="glyphicon glyphicon-user"></i> Enrolled Students</a></li>
                 <li><a href="Admin_View_Faculty.html"><i class="glyphicon glyphicon-user"></i> Faculty</a></li>
                 <li><a href="Admin_View_Course_dep.html"><i class="glyphicon glyphicon-comment"></i> Course dependencies</a></li>
 
@@ -68,6 +68,7 @@
                 <li><a href="Admin_Requests_Advising.html"><i class="glyphicon glyphicon-cog"></i> Advising</a></li>
                 <li class="active"> <a href="Admin_Requests_Grades.html"><i class="glyphicon glyphicon-cog"></i> Assign Grades </a></li>
                 <li><a href="Admin_Requests_Transcript.html"><i class="glyphicon glyphicon-cog"></i> Issue Transcript</a></li>
+
 
                
                
