--- a/initial_layout/Current_layout(using hj6_temp)/Admin_home.html
+++ b/initial_layout/Current_layout(using hj6_temp)/Admin_home.html
@@ -54,7 +54,7 @@
           </a>
             <ul class="list-unstyled collapse in" id="userMenu">
                 <li class="active"> <a href="Admin_View_Applicants.html"><i class="glyphicon glyphicon-user"></i> Applicants </a></li>
-                <li><a href="Admin_View_Students.html"><i class="glyphicon glyphicon-user"></i> enrolled students</a></li>
+                <li><a href="Admin_View_Students.html"><i class="glyphicon glyphicon-user"></i> Enrolled Students</a></li>
                 <li><a href="Admin_View_Faculty.html"><i class="glyphicon glyphicon-user"></i> Faculty</a></li>
                 <li><a href="Admin_View_Course_dep.html"><i class="glyphicon glyphicon-comment"></i> Course dependencies</a></li>
 
